# beaver

./: Cargo.toml  LICENSE
src/: lib.rs  scraper.rs
