[package]
name = "beaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beaver"
path = "src/lib.rs"

[dependencies]
actix = "0.13.1"
actix-broker = "0.4.3"
actix-rt = "2.9.0"
actix-telepathy = "0.6.0"
log = "0.4.20"
serde = "1.0.193"
scraper_lib = {version = "0.18.1" , package = "scraper" }
http = "1.0.0"
